# fragile

./: CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  Makefile  README.md
.github/workflows/: publish.yml  tests.yml
src/: fragile.rs  futures.rs  lib.rs  registry.rs  semisticky.rs  sticky.rs  thread_id.rs
