[package]
name = "fragile"
version = "2.0.1"
license = "Apache-2.0"
description = "Provides wrapper types for sending non-send values to other threads."
readme = "README.md"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
repository = "https://github.com/mitsuhiko/fragile"
homepage = "https://github.com/mitsuhiko/fragile"
keywords = ["send", "cell", "non-send", "send-wrapper", "failure"]
edition = "2018"

[dependencies]
slab = { version = "0.4.5", optional = true }
